style: fix margin block and hr color on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,10 +33,6 @@ html {
     font-family: "Inconsolata", monospace;
 }
 
-hr {
-    margin: 1em 0;
-}
-
 body {
     margin: 0 auto;
     max-width: 850px;
@@ -104,18 +100,23 @@ sub, label {
 
 hr {
     color: var(--accent-color);
-    margin-block: 2em;
+    border-color: var(--accent-color);
+    background-color: var(--accent-color);
+    margin-block-start: 2em;
+    margin-block-end: 2em;
 }
 
 p {
     line-height: 1.35;
-    margin-block: 0.75em;
+    margin-block-start: 0.75em;
+    margin-block-end: 0.75em;
 }
 
 blockquote {
     margin: 0;
     padding: 0.25em 0.25em 0.25em 1em;
-    margin-block: 0.75em;
+    margin-block-start: 0.75em;
+    margin-block-end: 0.75em;
     border-left: 5px solid var(--accent-color);
     background-color: black;
     word-wrap: break-word;
@@ -154,7 +155,8 @@ pre>code {
 }
 
 li {
-    margin-block: 0.5em;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
 }
 
 ul, ol {
@@ -390,7 +392,8 @@ body>footer {
     position: relative;
     text-size-adjust: none;
     -webkit-text-size-adjust: none;
-    margin-block: 0.3em;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
 }
 
 .highlight>div {
